v3.0.NaN - fix(tests): consolidate viewer restrictions tests
